@startuml

interface AlgebraicOperational
interface _temp.CharIdentification
class AlgebraicOperation
class Number
class OperationCache

AlgebraicOperational <.. AlgebraicOperation
AlgebraicOperational o-- Number : static
_temp.CharIdentification  o..o OperationCache
AlgebraicOperational o.. _temp.CharIdentification

OperationCache o-- Number

/'
class ArrayList {
Object[] elementData
size()
}'/

@enduml